<resources>
    <string name="app_name">My Grocery List App</string>
    <string name="action_settings">Settings</string>
    <string name="addfirstitem">Add First Item</string>
    <string name="enter_item">Enter Grocery</string>
    <string name="hint_item">Enter Grocery item</string>
    <string name="quantity">Quaantity</string>
    <string name="save">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="groceryName">Grocery Name</string>
    <string name="qty">QTY:</string>
    <string name="date_added">Date:</string>
    <string name="confirm">Are You Sure?</string>
    <string name="yes">YES:</string>
    <string name="no">NO</string>
</resources>
