<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/confirmationCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="23dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingTop="5dp"
                android:layout_centerHorizontal="true"
                android:textSize="17sp"
                android:text="@string/confirm"/>

            <Button
                android:id="@+id/noBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/no"
                android:layout_below="@id/textAlert"
                android:textColor="@android:color/white"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/yesBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/yes"
                android:layout_alignBottom="@id/noBtn"
                android:layout_alignParentRight="true"
                android:layout_below="@id/textAlert"
                android:textColor="@android:color/white"
                android:layout_marginTop="15dp"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>